# JUCE-Template

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
inc/: Parameters.hpp  PluginEditor.hpp  PluginProcessor.hpp
src/: PluginEditor.cpp  PluginProcessor.cpp
